force-app/main/default/objects/Aktivitas_Kartu__c/Aktivitas_Kartu__c.object-meta.xml
<CustomObject>
    <label>Aktivitas Kartu</label>
    <nameField>
        <displayFormat>Card-{0000000000}</displayFormat>
        <label>Aktivitas Kartu Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aktivitas Kartu</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>