force-app/main/default/objects/Aktivitas_Kartu__c/fields/amount__c.field-meta.xml
<CustomField>
    <fullName>amount__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>