force-app/main/default/objects/Aktivitas_Kartu__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Aktivitas Kartu</relationshipLabel>
    <relationshipName>Aktivitas_Kartu</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>