force-app/main/default/objects/Aktivitas_Kartu__c/fields/channelId__c.field-meta.xml
<CustomField>
    <fullName>channelId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Channel ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>