force-app/main/default/objects/Aktivitas_Kartu__c/fields/fiturId__c.field-meta.xml
<CustomField>
    <fullName>fiturId__c</fullName>
    <label>Fitur ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>