force-app/main/default/objects/Aktivitas_Kartu__c/fields/groupFitur__c.field-meta.xml
<CustomField>
    <fullName>groupFitur__c</fullName>
    <label>Group Fitur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>