force-app/main/default/objects/Aktivitas_Kartu__c/fields/Jam_Transaksi__c.field-meta.xml
<CustomField>
    <fullName>Jam_Transaksi__c</fullName>
    <label>Jam Transaksi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>