force-app/main/default/objects/Aktivitas_Kartu__c/fields/journalSeq__c.field-meta.xml
<CustomField>
    <fullName>journalSeq__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Journal Seq</label>
    <length>255</length>
    <type>Text</type>
</CustomField>