force-app/main/default/objects/Aktivitas_Kartu__c/fields/namaFitur__c.field-meta.xml
<CustomField>
    <fullName>namaFitur__c</fullName>
    <label>Nama Fitur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>