force-app/main/default/objects/Aktivitas_Kartu__c/fields/noHandphone__c.field-meta.xml
<CustomField>
    <fullName>noHandphone__c</fullName>
    <label>No Handphone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>