force-app/main/default/objects/Aktivitas_Kartu__c/fields/noKartu__c.field-meta.xml
<CustomField>
    <fullName>noKartu__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>No Kartu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>