force-app/main/default/objects/Aktivitas_Kartu__c/fields/noRekening__c.field-meta.xml
<CustomField>
    <fullName>noRekening__c</fullName>
    <label>No Rekening</label>
    <length>255</length>
    <type>Text</type>
</CustomField>