force-app/main/default/objects/Aktivitas_Kartu__c/fields/Response_Description__c.field-meta.xml
<CustomField>
    <fullName>Response_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Response Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>