force-app/main/default/objects/Aktivitas_Kartu__c/fields/responseCode__c.field-meta.xml
<CustomField>
    <fullName>responseCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Response Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>