force-app/main/default/objects/Aktivitas_Kartu__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>