force-app/main/default/objects/Aktivitas_Kartu__c/fields/Tanggal_Transaksi__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Transaksi__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tanggal Transaksi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>