force-app/main/default/objects/Aktivitas_Kartu__c/fields/tellerId__c.field-meta.xml
<CustomField>
    <fullName>tellerId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Teller ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>