force-app/main/default/objects/Aktivitas_Kartu__c/fields/terminalId__c.field-meta.xml
<CustomField>
    <fullName>terminalId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Terminal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>